RESOLVED FIXED205689
[WebGL] Fill in missing WebGL2 entry points
https://bugs.webkit.org/show_bug.cgi?id=205689
Summary [WebGL] Fill in missing WebGL2 entry points
Dean Jackson
Reported 2020-01-02 12:03:34 PST
[WebGL] Add a WebGL2RenderingContextBase and fill in missing WebGL2 entry points
Attachments
Patch (341.92 KB, patch)
2020-01-02 12:20 PST, Dean Jackson
no flags
Patch (40.62 KB, patch)
2020-01-06 14:38 PST, Dean Jackson
simon.fraser: review+
EWS (49.05 KB, patch)
2020-01-07 10:15 PST, Dean Jackson
no flags
EWS (101.53 KB, patch)
2020-01-07 11:15 PST, Dean Jackson
no flags
Radar WebKit Bug Importer
Comment 1 2020-01-02 12:04:38 PST
Dean Jackson
Comment 2 2020-01-02 12:20:15 PST
Dean Jackson
Comment 3 2020-01-06 14:38:29 PST
Dean Jackson
Comment 4 2020-01-06 14:39:18 PST
I'll need to rebaseline a couple of tests (we're exposing things that didn't exist before, so the type of failure has changed).
Dean Jackson
Comment 5 2020-01-07 10:15:03 PST
Dean Jackson
Comment 6 2020-01-07 11:15:11 PST
Dean Jackson
Comment 7 2020-01-07 12:55:14 PST
Note You need to log in before you can comment on or make changes to this bug.